Add utility functions for SHA-256 hashing with salt and verification
- Implemented `hash` function for generating SHA-256 hashes with a salt for certificate verification.
- Added `simpleHash` function for general-purpose hashing.
- Created `verifyHash` function to compare generated hashes with expected values.
- Included a simple SHA-256 implementation for browser environments.
- Added `secureHash` function utilizing the Web Crypto API for secure hashing in production.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+*.py
+*.csv
+*.txt
+/migrations
+pnpm-lock.yaml
+knowledge/token.json
+knowledge/data_with_hashes.json
