--- a/env.example
+++ b/env.example
@@ -1,10 +1,15 @@
+# Gmail OAuth
+NEXT_PUBLIC_GMAIL_CLIENT_ID=
+GMAIL_CLIENT_SECRET=
+GMAIL_REDIRECT_URI=http://localhost:3000/api/email/gmail/callback
 # UploadThing Configuration
 # Get your token from https://uploadthing.com/
 UPLOADTHING_TOKEN=your_uploadthing_token_here
 
-# Pexels Configuration
-# Get your API key from https://www.pexels.com/api/
-PEXELS_API_KEY=your_pexels_api_key_here
+# Cloudinary Configuration
+# Create an unsigned upload preset in your Cloudinary dashboard
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=your_unsigned_preset
 
 # Next.js Configuration
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
@@ -21,3 +26,5 @@ AUTH0_CLIENT_ID=your_client_id
 AUTH0_CLIENT_SECRET=your_client_secret
 AUTH0_SECRET=32_byte_hex_secret
 APP_BASE_URL=http://localhost:3000
+CLIENT_ID=""
+CLIENT_SECRET=""
