--- a/package.json
+++ b/package.json
@@ -28,21 +28,24 @@
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "html-to-image": "^1.11.13",
+    "googleapis": "^144.0.0",
+    "google-auth-library": "^9.14.2",
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.539.0",
     "next": "15.2.4",
-    "pexels": "^1.4.0",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-    "uploadthing": "^7.7.4"
+  "uploadthing": "^7.7.4",
+  "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.4",
