--- a/env.example
+++ b/env.example
@@ -2,6 +2,7 @@
 NEXT_PUBLIC_GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 GMAIL_REDIRECT_URI=http://localhost:3000/api/email/gmail/callback
+GMAIL_SENDER=
 # UploadThing Configuration
 # Get your token from https://uploadthing.com/
 UPLOADTHING_TOKEN=your_uploadthing_token_here
@@ -21,10 +22,17 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # EMAIL_API_KEY=your_email_service_key
 
 # Auth0 Configuration (v4 SDK)
-AUTH0_DOMAIN=your-tenant.us.auth0.com
+AUTH0_ISSUER_BASE_URL=https://your-tenant.us.auth0.com
 AUTH0_CLIENT_ID=your_client_id
 AUTH0_CLIENT_SECRET=your_client_secret
 AUTH0_SECRET=32_byte_hex_secret
-APP_BASE_URL=http://localhost:3000
+AUTH0_BASE_URL=http://localhost:3000
 CLIENT_ID=""
 CLIENT_SECRET=""
+
+# Encryption key for OAuth token encryption (32 bytes hex => 64 hex chars)
+TOKEN_ENCRYPTION_KEY=replace_with_64_hex_chars
+
+# Upstash Redis (for distributed rate limiting)
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
