--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@uploadthing/react": "^7.3.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
-    "html-to-image": "^1.11.13",
-    "googleapis": "^144.0.0",
     "google-auth-library": "^9.14.2",
+    "googleapis": "^144.0.0",
+    "html-to-image": "^1.11.13",
     "jspdf": "^3.0.1",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.539.0",
@@ -38,12 +39,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
-  "uploadthing": "^7.7.4",
-  "bcryptjs": "^2.4.3"
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
@@ -53,6 +54,7 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.23.8"
   }
 }
