--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "paths": {
       "@/*": ["./*"]
     }
+  ,
+  "types": ["node", "next"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
